WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97286
Chromium mac cannot display AppleColorEmoji
https://bugs.webkit.org/show_bug.cgi?id=97286
Summary
Chromium mac cannot display AppleColorEmoji
Kenichi Ishibashi
Reported
2012-09-20 20:10:27 PDT
See
http://crbug.com/62435
We need to ask Skia to use CTFontDrawGlyphs(). It will take time, so I'd like to disable AppleColorEmoji for now so that fallback fonts can be selected.
Attachments
Patch
(1.78 KB, patch)
2012-09-20 20:16 PDT
,
Kenichi Ishibashi
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.76 KB, patch)
2012-09-20 20:59 PDT
,
Kenichi Ishibashi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kenichi Ishibashi
Comment 1
2012-09-20 20:16:06 PDT
Created
attachment 165038
[details]
Patch
Kenichi Ishibashi
Comment 2
2012-09-20 20:16:39 PDT
Kent-san, What do you think about disabling AppleColorEmoji now?
Kent Tamura
Comment 3
2012-09-20 20:36:54 PDT
Comment on
attachment 165038
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=165038&action=review
> Source/WebCore/platform/graphics/mac/FontCacheMac.mm:122 > +#if PLATFORM(CHROMIUM) && OS(DARWIN) > + // Chromium can't render AppleColorEmoji. > + if ([[substituteFont familyName] isEqual:@"Apple Color Emoji"]) > + return 0; > +#endif
nit: I think OS(DARWIN) is not needed. FYI: Using PLATFORM() macro is not preferable in general. Ideally, we had better have WTF_USE_NO_APPLE_COLOR_EMOJI flag, and enable it for Chromium in WebCore/config.h. Using PLATFORM() is acceptable in this case because it's temporarily.
Kenichi Ishibashi
Comment 4
2012-09-20 20:59:20 PDT
Created
attachment 165041
[details]
Patch for landing
Kenichi Ishibashi
Comment 5
2012-09-20 21:00:55 PDT
Comment on
attachment 165038
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=165038&action=review
>> Source/WebCore/platform/graphics/mac/FontCacheMac.mm:122 >> +#endif > > nit: I think OS(DARWIN) is not needed. > > FYI: > Using PLATFORM() macro is not preferable in general. > Ideally, we had better have WTF_USE_NO_APPLE_COLOR_EMOJI flag, and enable it for Chromium in WebCore/config.h. > > Using PLATFORM() is acceptable in this case because it's temporarily.
Removed OS(DARWIN). Thank you for the heads-up. I'll keep in mind it!
WebKit Review Bot
Comment 6
2012-09-20 21:42:23 PDT
Comment on
attachment 165041
[details]
Patch for landing Clearing flags on attachment: 165041 Committed
r129190
: <
http://trac.webkit.org/changeset/129190
>
WebKit Review Bot
Comment 7
2012-09-20 21:42:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug