Chromium mac cannot display AppleColorEmoji https://bugs.webkit.org/show_bug.cgi?id=97286

Reviewed by Kent Tamura.

Disable AppleColorEmoji for now. We will re-enable it after Skia supports CTFontDrawGlyphs().

No new tests. Fallback fonts should be used for emoji codepoints.

* platform/graphics/mac/FontCacheMac.mm:
(WebCore::FontCache::getFontDataForCharacters):


Canonical link: https://commits.webkit.org/115236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129190 268f45cc-cd09-0410-ab3c-d52691b4dbfc