Source/WebCore/platform/graphics/mac/FontCacheMac.mm
@@ -115,6 +115,12 @@ const SimpleFontData* FontCache::getFontDataForCharacters(const Font& font, cons
     if (!substituteFont)
         return 0;
 
+#if PLATFORM(CHROMIUM)
+    // Chromium can't render AppleColorEmoji.
+    if ([[substituteFont familyName] isEqual:@"Apple Color Emoji"])
+        return 0;
+#endif
+
     // Use the family name from the AppKit-supplied substitute font, requesting the
     // traits, weight, and size we want. One way this does better than the original
     // AppKit request is that it takes synthetic bold and oblique into account.
